# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sypter"
version = "0.0.2"
description = "Frontend testing framework"
readme = "README.md"
authors = [{ name = "Temur Chichua", email = "contact@temurchichua.me" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    'Thumbnail URL: https://raw.githubusercontent.com/temurchichua/sypter/master/resources/images/logo.png'
]
keywords = ["frontend", "testing", "freamwork"]
dependencies = [
    "selenium",
    "geckodriver-autoinstaller",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest", 'tox', "bumpver"]

[project.urls]
Homepage = "https://github.com/temurchichua/sypter"
GitHub = "https://github.com/temurchichua/sypter"

[project.scripts]
sypter = "sypter.__main__:main"

[tool.bumpver]
current_version = "0.0.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"src/sypter/__init__.py" = [
    '__version__ = "{version}"',
]
"README.md" = [
    "{version}",
    "{pep440_version}",
]

